test/Fail/Issue7136c.err
Issue7136c.agda:6.14: error: [ParseError]
Illegal pattern synonym argument  x
(Arguments to pattern synonyms must be relevant.)
